samples/_failures_safe/1761087692_8516cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0bbf4ca1.c: In function ‘main’:
./samples/SAFE/__tmp_0bbf4ca1.c:135:5: error: expected identifier or ‘(’ at end of input
  135 |     Matrix a,
      |     ^~~~~~
./samples/SAFE/__tmp_0bbf4ca1.c:135:5: error: expected declaration or statement at end of input
